# restful-template

./: .config.toml  .gitignore  Cargo.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/console/: mod.rs
app/src/console/commands/: foo.rs  mod.rs
app/src/console/schedule/: mod.rs
app/src/controllers/: auth.rs  home.rs  mod.rs  post.rs
app/src/models/: post.rs
app/src/requests/: post.rs
bootstrap/: Cargo.toml
bootstrap/src/: lib.rs
database/migrations/: Cargo.toml
routes/: Cargo.toml
routes/src/: api.rs  console.rs  lib.rs  queue.rs  schedule.rs
