[workspace]
resolver = "2"
members = ["app", "bootstrap", "database/migrations", "routes"]

[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.7.9", default-features = false }
clap = { version = "4.5.23", default-features = false }
sea-orm = { version = "1.1.3", default-features = false }
sea-orm-migration = { version = "1.1.3", default-features = false }
serde = { version = "1.0.216", default-features = false }
serde_json = { version = "1.0.134", default-features = false }
soph = { version = "0.28.2", default-features = false }
soph-console = { version = "0.28.2", default-features = false }
soph-queue = { version = "0.28.2", default-features = false }
soph-server = { version = "0.28.2", default-features = false }
soph-schedule = { version = "0.28.2", default-features = false }
soph-tracing = { version = "0.28.2", default-features = false }
tokio = { version = "1.42.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }

# workspace
app = { path = "app" }
bootstrap = { path = "bootstrap" }
migration = { path = "database/migrations" }
routes = { path = "routes" }

[workspace.lints.rust]
unsafe_code = "forbid"
unreachable_pub = "deny"

[workspace.lints.clippy]
future_not_send = "warn"
unwrap_used = "warn"

[package]
name = "restful-template"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bootstrap = { workspace = true }
soph = { workspace = true }
