[package]
name = "bootstrap"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
soph = { workspace = true, features = ["full", "color-eyre"] }
soph-console = { workspace = true, features = ["commands", "status"] }
soph-server = { workspace = true, features = ["http1", "middleware", "request", "response"] }
soph-tracing = { workspace = true, features = ["env-filter"] }

# workspace
routes = { workspace = true }
migration = { workspace = true }

[lints]
workspace = true
