[package]
name = "routes"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
axum = { workspace = true }
soph = { workspace = true }
soph-console = { workspace = true }
soph-queue = { workspace = true }
soph-schedule = { workspace = true }
soph-server = { workspace = true }

# workspace
app = { workspace = true }

[lints]
workspace = true
