[package]
name = "migration"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { workspace = true, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
